--- a/inventory-single-master-multiple-nodes.erb
+++ b/inventory-single-master-multiple-nodes.erb
@@ -1,33 +1,38 @@
-# Create an OSEv3 group that contains the masters and nodes groups
+# Create an OSEv3 group that contains the master, nodes, etcd, and lb groups.
+# The lb group lets Ansible configure HAProxy as the load balancing solution.
+# Comment lb out if your load balancer is pre-configured.
 [OSEv3:children]
 masters
 nodes
+etcd
 
 # Set variables common for all OSEv3 hosts
 [OSEv3:vars]
 # SSH user, this user should allow ssh based auth without requiring a password
 ansible_ssh_user=root
+openshift_deployment_type=origin
 
 # If ansible_ssh_user is not root, ansible_become must be set to true
 #ansible_become=true
-
-openshift_deployment_type=origin
 
 # uncomment the following to enable htpasswd authentication; defaults to DenyAllPasswordIdentityProvider
 #openshift_master_identity_providers=[{'name': 'htpasswd_auth', 'login': 'true', 'challenge': 'true', 'kind': 'HTPasswdPasswordIdentityProvider', 'filename': '/etc/origin/master/htpasswd'}]
 
 # host group for masters
 [masters]
-master.example.com
+master1.oc.marlo
+master2.oc.marlo
+master3.oc.marlo
 
 # host group for etcd
 [etcd]
-master.example.com
+master1.oc.marlo
 
 # host group for nodes, includes region info
 [nodes]
-master.example.com
-node1.example.com openshift_node_labels="{'region': 'primary', 'zone': 'east'}"
-node2.example.com openshift_node_labels="{'region': 'primary', 'zone': 'west'}"
-infra-node1.example.com openshift_node_labels="{'region': 'infra', 'zone': 'default'}"
-infra-node2.example.com openshift_node_labels="{'region': 'infra', 'zone': 'default'}"
+master1.oc.marlo
+master[2:3].oc.marlo openshift_schedulable=true
+node1.oc.marlo openshift_node_labels="{'region': 'primary', 'zone': 'east'}"
+node2.oc.marlo openshift_node_labels="{'region': 'primary', 'zone': 'west'}"
+infra-node1.oc.marlo openshift_node_labels="{'region': 'infra', 'zone': 'default'}"
+infra-node2.oc.marlo openshift_node_labels="{'region': 'infra', 'zone': 'default'}"
