--- a/inventory-multiple-master-multiple-nodes.erb
+++ b/inventory-multiple-master-multiple-nodes.erb
@@ -5,11 +5,13 @@
 masters
 nodes
 etcd
+lb
 
 # Set variables common for all OSEv3 hosts
 [OSEv3:vars]
 # SSH user, this user should allow ssh based auth without requiring a password
-ansible_ssh_user=root
+ansible_ssh_user="root"
+ansible_ssh_pass="password"
 openshift_deployment_type=origin
 
 # If ansible_ssh_user is not root, ansible_become must be set to true
@@ -17,6 +19,16 @@ openshift_deployment_type=origin
 
 # uncomment the following to enable htpasswd authentication; defaults to DenyAllPasswordIdentityProvider
 #openshift_master_identity_providers=[{'name': 'htpasswd_auth', 'login': 'true', 'challenge': 'true', 'kind': 'HTPasswdPasswordIdentityProvider', 'filename': '/etc/origin/master/htpasswd'}]
+
+# Native high availbility cluster method with optional load balancer.
+# # If no lb group is defined installer assumes that a load balancer has
+# # been preconfigured. For installation the value of
+# # openshift_master_cluster_hostname must resolve to the load balancer
+# # or to one or all of the masters defined in the inventory if no load
+# # balancer is present.
+# openshift_master_cluster_method=native
+# openshift_master_cluster_hostname=ega-cluster.oc.marlo
+# openshift_master_cluster_public_hostname=ega-cluster.oc.marlo
 
 # host group for masters
 [masters]
@@ -27,6 +39,10 @@ master03.oc.marlo
 # host group for etcd
 [etcd]
 master01.oc.marlo
+
+# Specify load balancer host
+[lb]
+infra-node01.oc.marlo
 
 # host group for nodes, includes region info
 [nodes]
