--- a/inventory-multiple-master-multiple-nodes.erb
+++ b/inventory-multiple-master-multiple-nodes.erb
@@ -10,43 +10,50 @@ lb
 # Set variables common for all OSEv3 hosts
 [OSEv3:vars]
 # SSH user, this user should allow ssh based auth without requiring a password
-ansible_ssh_user="root"
-ansible_ssh_pass="password"
-openshift_deployment_type=origin
+ansible_ssh_user=root
+ansible_ssh_pass=password
+deployment_type=origin
+openshift_disable_check=docker_storage
+containerized=true
+openshift_release=v1.5.0
+openshift_image_tag=v1.5.0
 
 # If ansible_ssh_user is not root, ansible_become must be set to true
 #ansible_become=true
 
 # uncomment the following to enable htpasswd authentication; defaults to DenyAllPasswordIdentityProvider
-#openshift_master_identity_providers=[{'name': 'htpasswd_auth', 'login': 'true', 'challenge': 'true', 'kind': 'HTPasswdPasswordIdentityProvider', 'filename': '/etc/origin/master/htpasswd'}]
+# openshift_master_identity_providers=[{'name': 'htpasswd_auth', 'login': 'true', 'challenge': 'true', 'kind': 'HTPasswdPasswordIdentityProvider', 'filename': '/etc/origin/master/htpasswd'}]
+
+openshift_master_overwrite_named_certificates=true
+openshift_master_named_certificates=[{"certfile": "/vagrant/openshift/cert/ca.crt", "keyfile": "/vagrant/openshift/cert/ca.key", "names": ["ega-cluster.oc.marlo"]}]
 
 # Native high availbility cluster method with optional load balancer.
-# # If no lb group is defined installer assumes that a load balancer has
-# # been preconfigured. For installation the value of
-# # openshift_master_cluster_hostname must resolve to the load balancer
-# # or to one or all of the masters defined in the inventory if no load
-# # balancer is present.
-# openshift_master_cluster_method=native
-# openshift_master_cluster_hostname=ega-cluster.oc.marlo
-# openshift_master_cluster_public_hostname=ega-cluster.oc.marlo
+# If no lb group is defined installer assumes that a load balancer has
+# been preconfigured. For installation the value of
+# openshift_master_cluster_hostname must resolve to the load balancer
+# or to one or all of the masters defined in the inventory if no load
+# balancer is present.
+openshift_master_cluster_method=native
+openshift_master_cluster_hostname=ega-cluster.oc.marlo
+openshift_master_cluster_public_hostname=ega-cluster.oc.marlo
 
 # host group for masters
 [masters]
 master01.oc.marlo
-master02.oc.marlo
-master03.oc.marlo
+master02.oc.marlo 
+master03.oc.marlo 
 
 # host group for etcd
 [etcd]
-master01.oc.marlo
+master01.oc.marlo 
 
 # Specify load balancer host
 [lb]
-infra-node01.oc.marlo
+infra-node01.oc.marlo 
 
 # host group for nodes, includes region info
 [nodes]
-master01.oc.marlo
+#master01.oc.marlo
 master0[2:3].oc.marlo openshift_schedulable=true
 node01.oc.marlo openshift_node_labels="{'region': 'primary', 'zone': 'east'}"
 node02.oc.marlo openshift_node_labels="{'region': 'primary', 'zone': 'west'}"
